# hu-accompany

./: .gitignore  README.md  how-to-run.md  info.txt
backend/: main.py  manage.py  processor.py  rating.py  requirements.txt  test.py  test_notes copy.json  user_test.json
backend-core/core-logic/: Cargo.toml
backend-core/core-logic/src/: audio.rs
backend-core/native-ffi/: Cargo.toml
backend-core/native-ffi/src/: lib.rs
backend-web/: processor.py  requirements.txt
backend-web/api/: urls.py
backend-web/server/: settings.py
backend/api/: views.py
frontend/: .flutter-plugins-dependencies 2  README.md  pubspec.yaml
frontend/ios/: Podfile  recording_bridge.c
frontend/ios/Flutter/: Generated 2.xcconfig  flutter_export_environment 2.sh
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: DraggableRecorderButton.dart  Draggable_Recorder_Button.dart  DrawingOverlay.dart  Drawing_Overlay.dart  LiquidGlass.dart  Music_Library_Page.dart  main.dart
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
native_ffi/: Cargo.toml
native_ffi/src/: audio.rs  dsp.rs  lib.rs  models.rs
