[package]
name = "native_ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"] # Required for Flutter FFI compilation

[dependencies]
once_cell = "1.20"
cpal = "0.15"
spectrum-analyzer = "1.5"
pitch-detection = "0.3" 
realfft = "3.4"
num-complex = "0.4"
rubato = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

